Fixed gallery styling in overlap-group4 not same height as homepage

--- a/src/components/Insurance/Insurance.css
+++ b/src/components/Insurance/Insurance.css
@@ -332,7 +332,7 @@
   align-items: center;
   background-color: var(--gallery);
   display: flex;
-  height: 250px;
+  height: 300px;
   min-width: 1920px;
   padding: 0 920px;
   position: relative;
